@@ -100,15 +100,7 @@ public class FileParser<T>
         {
             return PropertyUtils.getProperty(model, name);
         }
-        catch (IllegalAccessException e)
-        {
-            e.printStackTrace();
-        }
-        catch (InvocationTargetException e)
-        {
-            e.printStackTrace();
-        }
-        catch (NoSuchMethodException e)
+        catch (IllegalAccessException|InvocationTargetException|NoSuchMethodException e)
         {
             e.printStackTrace();
         }
@@ -157,13 +149,9 @@ public class FileParser<T>
     {
         try
         {
-            return (IParser) parser.newInstance();
+            return (IParser) parser.getDeclaredConstructor().newInstance();
         }
-        catch (InstantiationException e)
-        {
-            return null;
-        }
-        catch (IllegalAccessException e)
+        catch (InstantiationException|IllegalAccessException|NoSuchMethodException|InvocationTargetException e)
         {
             return null;
         }
